web/wp-content/themes/FoundationPress-master/src/assets/scss/modules/_event-menu.scss
.menu-toggler {
  &, &:hover, &:focus {
    background-color: transparent;
    margin: 0;
    outline: 0;
  }
}

.event-home-link img {
  display: block;
  max-height: 5rem;
}

.event-header {
  @include clearfix;
  position: relative;
  z-index: 2;
  background-color: rgba(10,59,97,100);
  box-shadow: 0 0.5rem 0 0 rgba(0,0,0,0.2);

  .pre-nav {
    display: flex;
    align-content: stretch;

    @include breakpoint(large) {
      display: none;
    }

    a {
      @include button();
      @include button-style(transparent, transparent, $white);
      font-weight: bold;
      font-size: 1rem;
      margin: 0 1rem 0 0;
      flex-grow: 1;
    }

    .menu-toggler {
      flex-grow: 0;
    }

    .hamburger-icon {
      @include hamburger($white, $white, 20px, 16px, 2px, 3);
    }
  }
}

.event-menu {
  clear: both;
  background-color: inherit;
  max-height: 80vh;
  overflow: auto;

  ul, li { background-color: inherit; }

  ul {
    list-style: none;
    margin: 0 !important;
  }

  .event-menu-list {
    @include button-group('.page_item', 0);
    @include button-group-expand('.page_item', 0);

    @include breakpoint(medium down) {
      @include button-group-stack('.page_item');
    }

    > li {

      &:first-child { // HACK: We should add a class w/ a WP walker for this selector
        @include breakpoint(medium down) {
          display: none;
        }
      }

      a {
        @include button();
        @include button-style(transparent, rgba(0,0,0,0.2), $white);
        font-weight: bold;
        font-size: 1rem;
        margin-bottom: 0;
        display: flex;
        justify-content: center;
        align-items: center;

        @include breakpoint(large) {
          min-height: 100%;
        }
      }
    }

    .event-home-link {
      flex-grow: 1.75;
    }

    .page_item_has_children {
      position: relative;

      @include breakpoint(large) {
        > a {
          @include button-dropdown(0.4em, rgba(255,255,255,0.7), 1rem);
          cursor: default;

          &::after {
            top: 0.1em;
            transition: transform 0.2s ease-in-out;
          }
        }

        &:hover > a {
          background-color: rgba(0,0,0,0.2);
        }

        &:hover > a::after {
          transform: scaleY(-1);
        }

        .children {
          position: absolute;
          top: 100%;
          right: 0;
          min-width: 100%;
          box-shadow: 0 0.25rem 0 0.25rem rgba(0,0,0,0.2);
          visibility: hidden;
          opacity: 0;
          transition: opacity 0.4s;

          a {
            font-size: rem-calc(14);
            border-top-color: rgba(255,255,255,0.1);
          }
        }

        &:hover > .children {
          visibility: visible;
          opacity: 1;
        }
      }
    }
  }
}

